# games-miscellaneous

./: .gitignore  GEMINI.md  README.md  index.html  package.json  pyproject.toml
assets/: index-BtmQ-LJV.js  index-COoL-mYa.css  index-CoS1IsIw.js  index-DFf3i8-m.js  index-mA2VZbPg.css  index-vRh-5EoP.js
chess/: .gitignore  (+3 more)
terminal-games/: pyproject.toml
terminal-games/src/terminal_games/: __init__.py  __main__.py  config.py  launcher.py
terminal-games/src/terminal_games.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
terminal-games/src/terminal_games/chess/: __init__.py  __main__.py  app.py  chess_ai.py  models.py
terminal-games/src/terminal_games/chess/styles/: chess.tcss
terminal-games/src/terminal_games/chess/widgets/: __init__.py  chess_board.py
terminal-games/src/terminal_games/snake/: __init__.py  __main__.py  app.py  game_logic.py
terminal-games/src/terminal_games/snake/styles/: snake.tcss
terminal-games/src/terminal_games/snake/widgets/: __init__.py  game_board.py
terminal-games/src/terminal_games/spaceinvaders/: __init__.py  __main__.py  app.py  game_logic.py  models.py
terminal-games/src/terminal_games/tetris/: __init__.py  __main__.py  game_logic.py  models.py
terminal-games/src/terminal_games/tetris/styles/: tetris.tcss
terminal-games/src/terminal_games/tetris/widgets/: game_board.py  hud.py
terminal-games/src/terminal_games/tictactoe/: __init__.py  __main__.py  app.py  game_logic.py  models.py
terminal-games/src/terminal_games/tictactoe/styles/: tictactoe.tcss
terminal-games/src/terminal_games/tictactoe/widgets/: game_board.py
(+105 files in other folders)
